[package]
name = "wrds-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.wrds]
path = ".."

[[bin]]
name = "from_blocks"
path = "fuzz_targets/from_blocks.rs"
test = false
doc = false
bench = false
